<?xml version="1.0"?>
<package format="2">
  <name>hesai_msgs</name>
  <version>0.2.0</version>
  <description>
    Hesai messages required for the hesai_driver.
  </description>
  <maintainer email="wuxiaozhou@hesaitech.com">hesaiwuxiaozhou</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
</package>
